Ajustes de links relativos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoctorCARE</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -165,7 +165,7 @@
           
           <div class="col-b">
             <img
-            src="/assets/mulher com moletom.png"
+            src="./assets/mulher com moletom.png"
             alt="Mulher vestindo moletom verde e sorrindo"
             />
           </div>
@@ -278,7 +278,7 @@
           </div>
 
           <div class="col-b">
-            <img src="assets/doutor feliz.png" alt="">
+            <img src="./assets/doutor feliz.png" alt="">
           </div>
 
         </div>
@@ -322,7 +322,7 @@
           </div>
 
           <div class="col-b">
-            <img src="/assets/Homem com moletom.png" alt="">
+            <img src="./assets/Homem com moletom.png" alt="">
           </div>
         </div>
       </section>
